EasyNote/wwwroot/css/workspace.css
#title {
    width: 100%;
    font-size: 38px;
    font-family: "Noto Sans TC", sans-serif;
    font-weight: 900;
    font-style: normal;
    overflow-wrap: break-word;
    padding: 20px;
    border: none;
}

    #title:focus {
        outline: none;
        
    }

#main {
    width: 100%;
    height: 100%;
    padding: 30px;
    overflow-y: auto;
}

.empty-block {
    height: 30px;
    user-select: none;
}

.content-block {
    display: flex;
    border-radius: 10px;
    justify-content: space-between;
    align-items: center;
}

    .content-block-hover, .content-block:hover {
        background: #efefef;
        filter: drop-shadow(var(--drop-shdow-color) 0.1rem 0.1rem 2px);
    }

        .content-block-hover .drag-block, .content-block:hover .drag-block {
            opacity: 100%;
            filter: drop-shadow(var(--drop-shdow-color) 0.1rem 0.1rem 2px);
        }

        .content-block-hover .option-block, .content-block:hover .option-block {
            opacity: 100%;
            filter: drop-shadow(var(--drop-shdow-color) 0.1rem 0.1rem 2px);
        }

.insert-line {
    border-bottom: 5px solid #66badb;
    border-radius: 0;
}

.content-image {

}

.content {
    width: 95%;
    padding: 10px 0px;
}

    .content:focus {
        outline: none;
    }

.content-auto-width {
    width: auto;
}

.drag-block {
    display: flex;
    background: var(--main-color);
    border-radius: 5px;
    height: 40px;
    width: 25px;
    justify-content: center;
    align-items: center;
    margin-left: -15px;
    opacity: 0%;
    transition: all 0.3s;
    cursor: grab;
}

    .drag-block img {
        width: 15px;
        user-select: none;
    }

.option-block {
    display: flex;
    background: var(--main-color);
    border-radius: 5px;
    height: 40px;
    width: 25px;
    justify-content: center;
    align-items: center;
    margin-right: -15px;
    opacity: 0%;
    transition: all 0.3s;
    cursor: pointer;
}

    .option-block img {
        height: 20px;
        user-select: none;
    }

#new_block_btn {
    display: flex;
    margin-top: 10px;
    border-radius: 50px;
    width: 130px;
    font-weight: bold;
    color: #fff;
    background: var(--main-color);
    border: none;
    padding: 5px;
    filter: drop-shadow(var(--drop-shdow-color) 0.2rem 0.2rem 2px);
    user-select: none;
    font-size: 20px;
    align-items: center;
    justify-content: center;
}

    #new_block_btn:hover {
        background: var(--main-color-hover);
    }

    #new_block_btn i {
        margin-right: 5px;
    }

    #new_block_btn span {
        font-size: 14px;
    }

.custom-contextmenu {
    display: none;
    position: absolute;
    left: 0;
    top: 0;
    background: #313131;
    border-radius: 10px;
    filter: drop-shadow(var(--drop-shdow-color) 0.2rem 0.2rem 2px);
    z-index: 100;
    justify-content: center;
    align-items: center;
    color: #fff;
}

#contextmenu_page {
    width: auto;
    height: auto;
    padding: 5px;
    justify-content: space-between;
}

.contextmenu-functions {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    padding: 5px;
    user-select: none;
    border-radius: 5px;
}
    .contextmenu-functions i {
        padding: 2px 5px;
        margin-bottom: 0.125em;
    }

        .contextmenu-functions i:first-of-type {
            color: #b5b5b5;
        }

    .contextmenu-functions a {
        margin-left: 5px;
        padding-right: 5px;
    }

    .contextmenu-functions:hover {
        background: #515151;
    }

#text_color_dropdown {
    display: none;
    position: absolute;
    width: 165px;
    height: auto;
    background: #313131;
    left: 55px;
    top: 60px;
    padding: 10px;
    border-radius: 10px;
    user-select: none;
}

    #text_color_dropdown > a {
        font-size: 12px;
        text-align: start;
    }

    #text_color_dropdown > div {
        display: flex;
        margin: 5px 0 10px 0;
        justify-content: start;
        flex-wrap: wrap;
        background: #313131;
    }

    #text_color_dropdown > div > div {
        padding: 3px;
        font-weight: bold;
        border-radius: 5px;
        width: 30px;
        height: 30px;
        text-align: center;
        margin: 3px;
    }

        #text_color_dropdown > div > div:hover {
            background: #515151;
        }

#contextmenu_content_block {
    width: auto;
    height: auto;
    flex-direction: column;
    padding: 10px 5px;
    justify-content: center;
    align-items: center;
}

#contextmenu_content_block_delete_line {
    color: indianred;
}

    #contextmenu_content_block_delete_line i {
        color: indianred;
    }

.flex-row {
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
}

#file_form {
    display: none;
}

